examples/ingress-class/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-class-example
  annotations:
    k8s.ngrok.com/tls-min-version: "1.3"
spec:
  ingressClassName: ngrok
  rules:
  - host: ingress-class.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc-matching-ingress-class
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: different-ingress-class-example
  annotations:
    k8s.ngrok.com/tls-min-version: "1.3"
spec:
  ingressClassName: nginx # Example of using a different class than ngrok
  rules:
  - host: different-ingress-class.ngrok.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-svc-non-matching-ingress-class
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deploy-matching-ingress-class
spec:
  selector:
    matchLabels:
      app: http-echo-app-matching-ingress-class
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo-app-matching-ingress-class
    spec:
      containers:
      - name: http-echo-path2
        image: mendhak/http-https-echo:24
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-svc-matching-ingress-class
  labels:
    app: http-echo-app-matching-ingress-class
spec:
  ports:
  - name: http-echo-app
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo-app-matching-ingress-class
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deploy-non-matching-ingress-class
spec:
  selector:
    matchLabels:
      app: http-echo-app-non-matching-ingress-class
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo-app-non-matching-ingress-class
    spec:
      containers:
      - name: http-echo-path2
        image: mendhak/http-https-echo:24
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-svc-non-matching-ingress-class
  labels:
    app: http-echo-app-non-matching-ingress-class
spec:
  ports:
  - name: http-echo-app
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo-app-non-matching-ingress-class
